// CountRec for the WordCount examples

package tap;
 
message CountRec {
    required string word = 1;
    required int32 count = 2;
}
